src/test/contracts/negative/pattern_ct_bool.mligo
let foo (true : bool) = true
